# pythonbestpractices

./: README.md
01_dev_env_setup/: README.md  vscode_extensions.md
01_dev_env_setup/debug/: 01_fundamentals.ipynb  02_intermediate.ipynb  03_advanced.ipynb  debug_example.py  pipeline_example.py
01_dev_env_setup/scripts/: setup_macos.sh  setup_wsl.sh
01_dev_env_setup/templates/.github/: copilot-instructions.md
01_programming_best_practices/: README.md  vscode_extensions.md
01_programming_best_practices/templates/: data_documentation_template.md  doc_governance_checklist.md
01_programming_best_practices/templates/.github/workflows/: ci.yml
02_packaging_standards/: README.md
02_packaging_standards/templates/: .pre-commit-config.yaml  pyproject.toml
02_python_best_practices/: README.md
02_python_best_practices/templates/: .sqlfluff  README_TEMPLATE.md  poetry_quickstart.sh
02_python_best_practices/templates/.github/: pull_request_template.md
02_python_best_practices/templates/.github/workflows/: docs.yml
03_documentation/: README.md
03_documentation/templates/: CHANGELOG.md  CODEOWNERS  adr_template.md  docstring_examples.py  mkdocs.yml
03_documentation/templates/.github/workflows/: docs.yml
03_documentation/templates/docs/source/: conf.py  index.rst
03_testing/: README.md
05_version_control/: README.md
06_cicd/: README.md
